ENH: Add the ability to mock tasks